k8s/production/network/ingress/lms-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-backend-ingress
  namespace: lms
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.washgo247.com
    secretName: api-washgo247-com-tls
  rules:
  - host: api.washgo247.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms-backend-clusterip
            port:
              number: 8000
